[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fx/smoke_2.png" type="Texture" id=1]
[ext_resource path="res://scenes/Entities/FX/TrailSmoke/TrailSmoke.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 12

[sub_resource type="Curve" id=3]
min_value = 1.0
max_value = 2.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 2 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
width = 32
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 7.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.32
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
damping = 32.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[node name="TrailSmoke" type="Particles2D"]
amount = 1
lifetime = 1.5
fixed_fps = 30
process_material = SubResource( 5 )
texture = ExtResource( 1 )
normal_map = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
